--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,9 +10,7 @@
         android:layout_height="match_parent"/>
 
     <include
-        layout="@layout/main_bar"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_alignParentBottom="true"/>
+        layout="@layout/main_bar2"
+      />
 
 </RelativeLayout>
