--- a/app/src/main/res/drawable/selector_textcolor.xml
+++ b/app/src/main/res/drawable/selector_textcolor.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:color="@color/gold" android:state_selected="true"/>
+    <item android:color="@color/color_cdad3c" android:state_selected="true"/>
     <item android:color="@color/white"/>
 
 </selector>
