--- a/app/src/main/res/layout/main_bar.xml
+++ b/app/src/main/res/layout/main_bar.xml
@@ -2,6 +2,7 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:layout_alignParentBottom="true"
     android:layout_height="60dp"
     android:background="@android:color/transparent">
 
@@ -14,7 +15,7 @@
         android:background="@color/aqua"
         android:paddingTop="2dp"
         android:scaleType="centerInside"
-        android:src="@drawable/selector_tabicon"/>
+        android:src="@drawable/selector_homeicon"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -31,7 +32,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:drawablePadding="2dp"
-            android:drawableTop="@drawable/selector_tabicon"
+            android:drawableTop="@drawable/selector_homeicon"
             android:gravity="center"
             android:selectAllOnFocus="true"
             android:tag="0"
@@ -46,7 +47,7 @@
             android:layout_weight="1"
             android:tag="1"
             android:drawablePadding="2dp"
-            android:drawableTop="@drawable/selector_tabicon"
+            android:drawableTop="@drawable/selector_homeicon"
             android:gravity="center"
             android:text="消息"
             android:textColor="@drawable/selector_textcolor"
@@ -69,7 +70,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:drawablePadding="2dp"
-            android:drawableTop="@drawable/selector_tabicon"
+            android:drawableTop="@drawable/selector_homeicon"
             android:gravity="center"
             android:tag="2"
             android:text="发现"
@@ -82,7 +83,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:drawablePadding="2dp"
-            android:drawableTop="@drawable/selector_tabicon"
+            android:drawableTop="@drawable/selector_homeicon"
             android:gravity="center"
             android:tag="3"
             android:text="我"
