--- a/app/src/main/res/layout/main_bar2.xml
+++ b/app/src/main/res/layout/main_bar2.xml
@@ -9,30 +9,34 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_alignParentBottom="true"
-        android:background="#03b9fc"
+        android:background="@color/white"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/home"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="首页"
-            android:tag="0"
             android:layout_gravity="center"
+            android:layout_weight="1"
             android:drawablePadding="2dp"
-            android:drawableTop="@drawable/selector_tabicon"
-            android:gravity="center"/>
+            android:drawableTop="@drawable/bar_home"
+            android:gravity="center"
+            android:tag="0"
+            android:text="首页"
+            android:textSize="14sp"/>
+
         <TextView
             android:id="@+id/message"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_weight="1"
-            android:text="消息"
-            android:tag="1"
             android:drawablePadding="2dp"
-            android:drawableTop="@drawable/selector_tabicon"
-            android:gravity="center"/>
+            android:drawableTop="@drawable/bar_message"
+            android:gravity="center"
+            android:tag="1"
+            android:text="消息"
+            android:textSize="14sp"/>
 
         <ImageView
             android:id="@+id/add"
@@ -40,29 +44,34 @@
             android:layout_height="72dp"
             android:layout_gravity="bottom"
             android:layout_weight="1"
-            android:scaleType="centerCrop"
-            android:src="@android:drawable/ic_menu_add"/>
+            android:scaleType="center"
+            android:src="@drawable/bar_add"/>
 
         <TextView
             android:id="@+id/find"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_weight="1"
-            android:text="发现"
-            android:tag="2"
             android:drawablePadding="2dp"
-            android:drawableTop="@drawable/selector_tabicon"
-            android:gravity="center"/>
+            android:drawableTop="@drawable/bar_find"
+            android:gravity="center"
+            android:tag="2"
+            android:text="发现"
+            android:textSize="14sp"/>
+
         <TextView
             android:id="@+id/me"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_weight="1"
-            android:text="我"
-            android:tag="3"
             android:drawablePadding="2dp"
-            android:drawableTop="@drawable/selector_tabicon"
-            android:gravity="center"/>
+            android:drawableTop="@drawable/bar_me"
+            android:gravity="center"
+            android:tag="3"
+            android:text="我"
+            android:textSize="14sp"/>
 
 
     </LinearLayout>
