--- a/app/src/main/res/layout/top_bar.xml
+++ b/app/src/main/res/layout/top_bar.xml
@@ -3,15 +3,15 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="44dp"
-    android:background="@color/gold"
+    android:background="@color/white"
     android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/menu"
-        android:layout_width="80dp"
+        android:layout_width="60dp"
         android:layout_height="match_parent"
         android:scaleType="centerInside"
-        android:src="@drawable/selector_tabicon"/>
+        android:src="@drawable/home_caidan"/>
 
     <TextView
         android:id="@+id/title"
@@ -19,15 +19,16 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:gravity="center"
+        android:textColor="@color/color_505050"
         android:text="聚福"
         android:textSize="18dp"/>
 
     <ImageView
         android:id="@+id/search"
-        android:layout_width="80dp"
+        android:layout_width="60dp"
         android:layout_height="match_parent"
         android:scaleType="centerInside"
-        android:src="@drawable/selector_tabicon"/>
+        android:src="@drawable/home_search"/>
 
 
 </LinearLayout>
